Revert "Merge upstream changes"
This reverts commit 3ff68bf588b692f27ee97297819ebe6096fa32d0.

Signed-off-by: Usman Saleem <usman@usmans.info>